--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,10 @@ version: '3'
 services:
   mongodb:
     restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: user
+      MONGO_INITDB_ROOT_PASSWORD: password
+      MONGO_INITDB_DATABASE: Dice_Game
     build:
       context: .
       dockerfile: Dockerfile.mongo
@@ -10,7 +14,7 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - ./init-db.js:/docker-entrypoint-initdb.d/init-db.js
+      - ./init-db.js:/docker-entrypoint-initdb.d/init-db.js:ro
     networks:
       - mynetwork
 
