--- a/Dockerfile.mongo
+++ b/Dockerfile.mongo
@@ -1,23 +1,19 @@
 FROM mongo:latest
 
-# Install MongoDB tools
-RUN apt-get update && apt-get install -y \
-    mongodb-org-tools \
-    && rm -rf /var/lib/apt/lists/*
-# Install MongoDB Shell (mongosh)
-RUN apt-get update && apt-get install -y \
-    gnupg \
-    wget
+COPY init-db.js /docker-entrypoint-initdb.d/
 
-RUN wget -qO - https://www.mongodb.org/static/pgp/server-5.0.asc | apt-key add -
-RUN echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/5.0 multiverse" | tee /etc/apt/sources.list.d/mongodb-org-5.0.list
-RUN apt-get update && apt-get install -y \
-    mongodb-mongosh
+#Install node
+# RUN apt-get update && apt-get install -y nodejs
+
+# Create a custom entry point script
+# COPY entrypoint.sh /entrypoint.sh
+# RUN chmod +x /entrypoint.sh
 
 EXPOSE 27017
 
 # Start MongoDB
 CMD ["mongod"]
+# CMD ["mongosh" , "--eval",  "load('/docker-entrypoint-initdb.d/init-db.js')"]
 
 
 
