--- a/Dockerfile.myapp
+++ b/Dockerfile.myapp
@@ -5,7 +5,7 @@ FROM openjdk:17-jdk-slim
 WORKDIR /app
 
 # Copy the JAR file into the container at /app
-COPY ./out/artifacts/DiceGame_jar/DiceGame.jar /app/DiceGame.jar
+COPY ./build/libs/DiceGame-0.0.1-SNAPSHOT.jar /app/DiceGame.jar
 
 # Expose the port that your Spring Boot app will run on
 EXPOSE 8081
