update home 11 dec 2023

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
       dockerfile: Dockerfile.mongo
     ports:
       - "27017:27017"
-    volumes:
-      - ./init-db.js:/docker-entrypoint-initdb.d/init-db.js:ro
+    #volumes:
+      #- ./init-db.js:/docker-entrypoint-initdb.d/init-db.js:ro
     networks:
       - mynetwork
 
