--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,15 +5,17 @@ services:
     container_name: mongodb
     restart: always
     environment:
-      MONGO_INITDB_ROOT_USERNAME: user
-      MONGO_INITDB_ROOT_PASSWORD: password
+      # MONGO_INITDB_ROOT_USERNAME: user
+      # MONGO_INITDB_ROOT_PASSWORD: password
       MONGO_INITDB_DATABASE: Dice_Game
+      ME_CONFIG_MONGODB_URL: mongodb://normalUser:password@mongodb:27017/Dice_Game
+
     build:
       context: .
       dockerfile: Dockerfile.mongo
     ports:
       - "27017:27017"
-    #volumes:
+      #volumes:
       #- ./init-db.js:/docker-entrypoint-initdb.d/init-db.js:ro
     networks:
       - mynetwork
@@ -21,11 +23,13 @@ services:
   spring-app:
     #restart: always
     environment:
-        SPRING_DATA_MONGODB_HOST: mongodb
-        SPRING_DATA_MONGODB_PORT: 27017
-        SPRING_DATA_MONGODB_DATABASE: Dice_Game
-        SPRING_DATA_MONGODB_USERNAME: normalUser
-        SPRING_DATA_MONGODB_PASSWORD: password
+      SPRING_DATA_MONGODB_HOST: mongodb
+      #SPRING_DATA_MONGODB_PORT: 27017
+      #SPRING_DATA_MONGODB_DATABASE: Dice_Game
+      #SPRING_DATA_MONGODB_USERNAME: normalUser
+      #SPRING_DATA_MONGODB_PASSWORD: password
+      ME_CONFIG_MONGODB_URL: mongodb://normalUser:password@mongodb:27017/Dice_Game
+
 
     build:
       context: .
@@ -41,5 +45,5 @@ services:
 networks:
   mynetwork:
     driver: bridge
-    # driver_opts:
-      # com.docker.network.bridge.name: mynetwork
+      # driver_opts:
+    # com.docker.network.bridge.name: mynetwork
