update jobplace 13 dec 2023

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,17 +8,18 @@ services:
       # MONGO_INITDB_ROOT_USERNAME: user
       # MONGO_INITDB_ROOT_PASSWORD: password
       MONGO_INITDB_DATABASE: Dice_Game
-      ME_CONFIG_MONGODB_URL: mongodb://normalUser:password@mongodb:27017/Dice_Game
+      ME_CONFIG_MONGODB_URL: mongodb://mongodb:27017/Dice_Game
 
     build:
       context: .
       dockerfile: Dockerfile.mongo
     ports:
       - "27017:27017"
-      #volumes:
-      #- ./init-db.js:/docker-entrypoint-initdb.d/init-db.js:ro
+    volumes:
+      - ./init-db.js:/docker-entrypoint-initdb.d/init-db.js
     networks:
-      - mynetwork
+      mynetwork:
+        ipv4_address: 172.18.0.5
 
   spring-app:
     #restart: always
@@ -28,8 +29,7 @@ services:
       #SPRING_DATA_MONGODB_DATABASE: Dice_Game
       #SPRING_DATA_MONGODB_USERNAME: normalUser
       #SPRING_DATA_MONGODB_PASSWORD: password
-      ME_CONFIG_MONGODB_URL: mongodb://normalUser:password@mongodb:27017/Dice_Game
-
+      ME_CONFIG_MONGODB_URL: mongodb://172.18.0.5:27017/Dice_Game
 
     build:
       context: .
@@ -40,10 +40,15 @@ services:
     depends_on:
       - mongodb
     networks:
-      - mynetwork
+      mynetwork:
+        ipv4_address: 172.18.0.6
 
 networks:
   mynetwork:
     driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.18.0.0/16
       # driver_opts:
     # com.docker.network.bridge.name: mynetwork
